# orchestrator

./: .env.example  .gitignore  .orchestrator_cli_history  Cargo.toml  GALAXY_SETUP.md  Makefile  justfile  test_galaxy.txt
docs/: galaxy_setup.md  logging.md
galaxy/: test_galaxy.txt
src/: channels_manager.rs  convo_manager.rs  explorer_factory.rs  galaxy_setup.rs  globals.rs  id.rs  lib.rs  logging_utils.rs  main.rs  orchestrator.rs  planet.rs  planet_factory.rs  ui.rs
src/cli/: args.rs  mod.rs  output.rs  parser.rs  repl.rs
src/convo_manager/: convo_factory.rs  convo_scheduler.rs  message_handler.rs  queue.rs
src/convo_manager/convo_factory/: explorer_convo.rs  from_entities_convo.rs  planet_convo.rs
src/logging/: format.rs  init.rs  mod.rs  routing.rs  targets.rs
src/logging_utils/: mod.rs  targets.rs
src/orchestrator/: convo_factory.rs  convo_router.rs  event_senders.rs  queue.rs  ui_handler.rs
src/orchestrator/background_events/: context.rs  control.rs  dispatch.rs  mod.rs  planning.rs  regimes.rs  scheduler.rs  state.rs  timing.rs
src/orchestrator/conversations/: macros.rs  mod.rs  orch_explorer.rs  orch_planet.rs  params.rs  util.rs
src/orchestrator/conversations/macros/: mod.rs  request_state.rs  response_state.rs
src/orchestrator/conversations/orch_explorer/: bag_content_scenario.rs  combine_resource.rs  craft_resource.rs  kill_explorer.rs  kill_explorers_manager.rs  lifecycle.rs  move_to_planet.rs  movement.rs  neighbors_discovery.rs  reset_explorer.rs  resources.rs  start_explorer.rs  stop_explorer.rs  supported_combination.rs  supported_resources.rs  test_utils.rs
src/orchestrator/conversations/orch_explorer/lifecycle/: kill_explorer.rs  reset_explorer.rs  start_explorer.rs  stop_explorer.rs
src/orchestrator/conversations/orch_explorer/move_to_planet/: errors.rs  incoming_explorer.rs  manual_move_to_planet.rs  move_explorer.rs  outgoing_explorer.rs  wait_move_response.rs  (+3 more)
src/orchestrator/conversations/orch_planet/: adv_dead_explorer.rs  asteroid_scenario.rs  galaxy_events.rs  internal_state_scenario.rs  kill_planet.rs  mod.rs  outgoing_explorer.rs  start_planet.rs  stop_planet.rs  sunray_scenario.rs  test_utils.rs
tests/: planets_tests.rs
(+22 files in other folders)
