[package]
name = "orchestrator"
version = "0.2.0"
edition = "2024"

[lib]
name = "orchestrator"
path = "src/lib.rs"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
common-game = "=3.0.0"
crossbeam-channel = "0.5.15"
priority-queue = "2.7.0"
fern = { version = "0.7", features = ["colored"] }
log = "0.4"
humantime = "2"
colored = "2"
chrono = "0.4"
rand = "0.9.2"

luna4 = {git = "https://github.com/luna4-ap2025/Planet_Luna4"}
rustrelli = {git = "https://github.com/Rustrelli/rustrelli"}
enterprise = {git = "https://github.com/Thompspsps/Enterprise_planet/"}
houston-we-have-a-borrow = { package = "Planet", git = "https://github.com/Houston-we-have-a-borrow/Planet/"}
orbitron = {git = "https://github.com/Advanced-Programming-2025-Orbitron/Orbitron/"}
trip = { git = "https://github.com/Totally-Reliable-Imaginary-Planets/TRIP.git", branch = "main" }
rusty-crab-ap2025 = "=2.0.0-beta.3"

common-explorer = {git = "https://github.com/ImmutableCosmicBorrow/common-explorer/"}
explorer_nico = {git = "https://github.com/ImmutableCosmicBorrow/explorer_nico"}
explorer_jacopo =  {git = "https://github.com/ImmutableCosmicBorrow/explorer_jacopo.git"}
explorer_rob =  {git = "https://github.com/ImmutableCosmicBorrow/explorer_rob.git"}

[patch.'https://github.com/unitn-ap-2025/common']
common-game = "=3.0.0"
